--- a/css/styles.css
+++ b/css/styles.css
@@ -35,5 +35,38 @@ body{
     color:white;
 }
 .capa span{
-    color:green;
+    color: orange;
+    display: block;
 }
+
+.capa div{
+    display: inline-block;
+    height: 650px;
+}
+.profile-pic{
+    width: 39%;
+    text-align: center;
+
+}
+.profile-pic img{
+    border-radius: 50%;
+    width: 320px;
+    margin-top: 100px;
+}
+.profile-title{
+    vertical-align: top;
+    width: 59%;
+}
+.profile-title h1{
+    margin-top: 200px;
+    font-size: 58px;
+    font-weight: 400;
+    text-transform: uppercase;
+    line-height: 54px;
+}
+.profile-title h2{
+    margin-top: -26px;
+
+}
+
+
