--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@ body{
     background-color: black;
     color: white;
     height: 56px;
+
+    animation: navegacao;
+    animation-duration: 2s;
 }
 .navigation a{
     color: white;
@@ -39,6 +42,10 @@ body{
     padding-left: 30px;
 }
 
+.navigation li .treeline-con{
+    display: inline-block;
+}
+
 .capa{
     color:white;
 }
@@ -55,6 +62,10 @@ body{
     width: 39%;
     text-align: center;
 
+    animation: profile-capa;
+    animation-duration: 2s;
+    
+
 }
 .profile-pic img{
     border-radius: 50%;
@@ -64,6 +75,9 @@ body{
 .profile-title{
     vertical-align: top;
     width: 59%;
+
+    animation: titulo-capa;
+    animation-duration: 2s;
 }
 .profile-title h1{
     margin-top: 200px;
@@ -131,4 +145,28 @@ body{
     color: grey;
 }
 
+@keyframes profile-capa {
+    0% {transform: translate(-20px, 0px)}
+    100% {transform: translate(0px, 0px)}
+    
+}
+
+@keyframes titulo-capa{
+    0% {transform: translate(0px, -20px)}
+    100% {transform: translate(0px, 0px)}
+    
+}
+
+@keyframes navegacao {
+    0% {opacity: 0;} 
+    50% {opacity: 0;} 
+    100% {opacity: 1;} 
+      
+}
+
+@media (max-width: 100px) {
+    .navigation{
+        background-color: yellow;
+    }
+}
 
