--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body{
     height: 56px;
 
     animation: navegacao;
-    animation-duration: 2s;
+    animation-duration: 4s;
 }
 .navigation a{
     color: white;
@@ -40,10 +40,12 @@ body{
     line-height: 56px;
     padding-left: 30px;
     padding-left: 30px;
+    font-weight: 100;
+    font-size: 18px;
 }
 
-.navigation li .treeline-con{
-    display: inline-block;
+.navigation li.threeline-icon{
+    display: none;
 }
 
 .capa{
@@ -88,6 +90,8 @@ body{
 }
 .profile-title h2{
     margin-top: -26px;
+    font-weight: 100;   
+    font-size: 16px;
 
 }
 .main{
@@ -103,6 +107,8 @@ body{
 .cv-pic {
     float: left;
     width: 250px;
+    margin-right: 20px;
+    margin-bottom: 20px;
     
 }
 .main h1 {
@@ -115,6 +121,7 @@ body{
     color:white;
     font-size: 16px;
     text-transform: uppercase;
+    font-weight: normal;
 
 }
 
@@ -146,7 +153,7 @@ body{
 }
 
 @keyframes profile-capa {
-    0% {transform: translate(-20px, 0px)}
+    0% {transform: translate(0px, 20px)}
     100% {transform: translate(0px, 0px)}
     
 }
@@ -164,9 +171,63 @@ body{
       
 }
 
-@media (max-width: 100px) {
-    .navigation{
-        background-color: yellow;
+@media (max-width: 1000px) {
+    .navigation li {
+        display: none;
     }
+
+    .navigation li.threeline-icon{
+        display: inline-block;
+    }
+
+    .capa div {
+        display: block;
+        height: auto;
+    }
+
+    .profile-pic {
+        width: 100%;
+    }
+
+    .profile-pic img {
+        max-width: 75%;
+        margin-top: 0;        
+    }
+
+    .profile-title {
+        text-align: center;
+        width: 100%;
+    }
+
+    .profile-title h1 {
+        margin-top: 30px;
+        font-size: 36px;
+        margin-left:  20px;
+        margin-right: 25px;
+    }
+
+    .profile-pic h2 {
+        margin-top: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+.menujs {
+    height: auto;
+    
+}
+.menujs ul{
+    background-color: chocolate;
+    height: auto;
+    text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
+
+}
+.menujs li{
+    background-color: red;
+    display: block;
+    border-bottom: grey 1px;
+}
 }
 
