--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body{
     color: white;
     height: 56px;
     padding-right: 50px;
+    cursor: pointer;
 
     animation: navegacao;
     animation-duration: 2s;
@@ -102,7 +103,7 @@ body{
     padding-bottom: 80px;
     padding-left: 100px; */
 
-
+    display: grid;
 }
 
 .cv-pic {
@@ -113,26 +114,53 @@ body{
     
 }
 
-.cv-pic-port {
-    float: center;
-    width: 500px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    max-width: 100%;
-    
-}
 .legenda{
-    margin-top: 10px; 
-    text-align: center;
+    width: 600px; 
+    display: block;
+    margin: 100px auto;
+    position: relative;
+    cursor: pointer;
 }
 
 .legenda a{
     text-decoration: none;
-    color: white;
 }
-.legenda a:hover{
-    color: red;
+
+.cv-pic-port {
+    float: center;
+    width: 100%;
+    height: auto;
+    border-radius: 10%;
+    
 }
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 10px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.image-legenda{
+    color: blue;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    padding: 20px;
+}
+
+.legenda:hover .overlay{
+    opacity: 1;
+}
+
 
 .contato{
     padding: 30px;
@@ -140,6 +168,10 @@ body{
 
 .contato h1{
     color: blue;
+}
+.contato a{
+    color: white;
+    text-decoration: none;
 }
 .main h1 {
     color: blue;
@@ -243,7 +275,9 @@ body{
         margin-right: 20px;
     }
 }
-
+    @media (min-width: 461px){
+        
+    }
 .menuJs {
     height: auto;
     padding: center;
